--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "0.1.0",
   "type": "commonjs",
+  "license": "UNLICENSED",
   "scripts": {
     "process": "ts-node scripts/process.ts",
     "start": "yarn run nodemon -e ts,graphql src/index.ts",
@@ -14,6 +15,7 @@
     "yaml": "^1.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/node": "14.14.14",
     "dotenv-cli": "4.0.0",
     "nodemon": "2.0.6",
